--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ li {
 body {
     background-image: url('https://images.pexels.com/photos/163194/old-retro-antique-vintage-163194.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');
     background-size: cover;
-    bacground-repeat: no-repeat;
+    background-repeat: no-repeat;
     height: 100%;
     text-align: center;
     font-size: 30px;
