--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ li {
 
 body {
     background-image: url('https://images.pexels.com/photos/163194/old-retro-antique-vintage-163194.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     text-align: center;
