--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-image: url('https://images.pexels.com/photos/163194/old-retro-antique-vintage-163194.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    /*height: 100%;*/
     text-align: center;
     font-size: 30px;
 }
